<resources>
    <string name="app_name">UFC</string>
    <string name="game">New Game</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="aboutMessage">This app is written by Michael.
    This app is a game UFC.
    '\n'Version 1.0</string>
    <string name="name">Call fighter</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="speed">speed</string>
    <string name="endurance">endurance</string>
    <string name="accuracy">accuracy</string>
    <string name="tactics">tactics</string>
    <string name="aggression">aggression</string>
    <string name="head">head protection factor</string>
    <string name="body">body protection factor</string>
    <string name="hands">hands protection factor</string>
    <string name="legs">legs protection factor</string>
    <string name="o">0</string>
    <string name="next">next</string>
    <string name="letsFight">Lets Fight!</string>
    <string name="message">The remaining points</string>
    <string name="amountTwoActivity">350</string>
    <string name="amountThreeActivity">280</string>
    <string name="random">random</string>
    <string name="new_fight">new fight</string>
    <string name="Return">Return to menu</string>
</resources>
