<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@mipmap/background">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <SeekBar
            android:id="@+id/speedSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout1"
            android:indeterminate="false"
            android:max="100"/>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:text="@string/speed"
                android:textSize="@dimen/my_text_size"/>

            <TextView
                android:id="@+id/speedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textSize="@dimen/my_text_size"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <SeekBar
            android:id="@+id/enduranceSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout2"
            android:indeterminate="false"
            android:max="100"/>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/endurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:text="@string/endurance"
                android:textSize="@dimen/my_text_size"/>

            <TextView
                android:id="@+id/enduranceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textSize="@dimen/my_text_size"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp">

        <SeekBar
            android:id="@+id/accuracySeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout3"
            android:indeterminate="false"
            android:max="100"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:text="@string/accuracy"
                android:textSize="@dimen/my_text_size"/>

            <TextView
                android:id="@+id/accuracyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textSize="@dimen/my_text_size"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp">

        <SeekBar
            android:id="@+id/tacticsSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout4"
            android:indeterminate="false"
            android:max="100"/>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tactics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:text="@string/tactics"
                android:textSize="@dimen/my_text_size"/>

            <TextView
                android:id="@+id/tacticsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textSize="@dimen/my_text_size"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="210dp"
        android:id="@+id/relativeLayout">

        <SeekBar
            android:id="@+id/aggressionSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout5"
            android:indeterminate="false"
            android:max="100"/>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/aggression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="90dp"
                android:layout_marginRight="90dp"
                android:text="@string/aggression"
                android:textSize="@dimen/my_text_size"/>

            <TextView
                android:id="@+id/aggressionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:textSize="@dimen/my_text_size"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/next2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@android:color/holo_orange_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random"
        android:background="@android:color/holo_orange_light"
        android:layout_above="@+id/next2"
        android:layout_alignLeft="@+id/next2"
        android:layout_alignStart="@+id/next2"
        android:layout_marginBottom="22dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:editable="false"
        android:text="@string/amountTwoActivity"
        android:id="@+id/sumValue"
        android:layout_alignBottom="@+id/message"
        android:layout_toRightOf="@+id/next2"
        android:layout_toEndOf="@+id/next2"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="@dimen/my_text_size"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_toLeftOf="@+id/sumValue"
        android:layout_toStartOf="@+id/sumValue"/>

</RelativeLayout>